Fix overflow on mobile phones,last touches (part6)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,7 @@ body {
     position: absolute;
     bottom: 0;
   }
+  html, body {
+    position:relative;
+    overflow-x:hidden;
+  }
